--- a/src/Msp/FrontendBundle/Resources/views/Page/college.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/college.html.twig
@@ -16,7 +16,7 @@
 {% block content %}
    <div class="niveau">
         
-        <header class="header">
+        <header class="header avenirNextItalic">
            Le collège est une étape importante de l’éducation, les matières sont diverses et variées. Un 
            accompagnement de l’élève  est indispensable pour lui permettre de s’adapter à ce nouveau rythme 
            de travail. L’intérêt des mathématiques acquis au primaire, doit continuer à être stimuler via de 
@@ -29,7 +29,7 @@
        
         <div id="tabs">
             
-            <ul>
+            <ul class="avenirNextBold">
                 <li><a href="#tabs-1">SIXIÈME</a></li>
                 <li><a href="#tabs-2">CINQUIÈME</a></li>
                 <li><a href="#tabs-3">QUATRIÈME</a></li>
@@ -55,7 +55,7 @@
                 </div>
                 
                 <div class="bgblankgrey">                    
-                    <h2>Organisation et gestion de données, fonctions</h2>
+                    <h2 class="avenirNextDemiBold">Organisation et gestion de données, fonctions</h2>
                     <p>
                         La résolution de problèmes de proportionnalité est déjà travaillée à l’école primaire. 
                         Elle se poursuit en Sixième, avec des outils nouveaux. La proportionnalité fait l'objet 
@@ -81,7 +81,7 @@
                 </div>
                 
                 <div class="bgblankgrey">                    
-                    <h2>Nombres et Calculs</h2>
+                    <h2 class="avenirNextDemiBold">Nombres et Calculs</h2>
                     <p>
                        En continuité avec l'école élémentaire les problèmes doivent permettre aux élèves 
                        d'associer à une situation concrète un travail numérique, de mieux saisir le sens des 
@@ -108,7 +108,7 @@
                 </div>
                 
                 <div class="bgblankgrey">                    
-                    <h2>Géométrie</h2>
+                    <h2 class="avenirNextDemiBold">Géométrie</h2>
                     <p>
                        À l’école élémentaire, les élèves ont acquis une première expérience des figures et des 
                        solides les plus usuels, en passant d’une reconnaissance perceptive (reconnaissance des 
@@ -159,7 +159,7 @@
                 </div>
                 
                 <div class="bgblankgrey">                    
-                    <h2>Grandeurs et mesures</h2>
+                    <h2 class="avenirNextDemiBold">Grandeurs et mesures</h2>
                     <p>
                        En continuité avec le travail effectué à l’école élémentaire, cette rubrique s’appuie 
                        sur la résolution de problèmes souvent empruntés à la vie courante. Elle permet 
@@ -194,7 +194,7 @@
                 </div >
                 
                 <footer class="footer">
-                    <strong>Nos cours associés</strong>
+                    <p class="avenirNextDemiBold">Nos cours associés</p>
                     Je recherche un cours de sixième.
                     <a href="#"><img src="{{ asset('/img/arrow-right.jpg') }}" alt="En savoir plus" /></a>
                 </footer>
@@ -213,7 +213,7 @@
                 </div>
                 
                 <div class="bgblankgrey">                    
-                    <h2>Organisation et gestion de données, fonctions</h2>
+                    <h2 class="avenirNextDemiBold">Organisation et gestion de données, fonctions</h2>
                     <p>
                         En classe de cinquième, la proportionnalité occupe toujours une place centrale. Les 
                         méthodes de résolution des problèmes de proportionnalité évoluent avec les 
@@ -241,7 +241,7 @@
                 </div>
                 
                 <div class="bgblankgrey">                    
-                    <h2>Nombres et Calculs</h2>
+                    <h2 class="avenirNextDemiBold">Nombres et Calculs</h2>
                     <p>
                        Les problèmes proposés associant à une situation donnée une activité numérique, 
                        renforcent le sens des opérations et des diverses écritures numériques et littérales. 
@@ -269,7 +269,7 @@
                 </div>
                 
                 <div class="bgblankgrey">                    
-                    <h2>Géométrie</h2>
+                    <h2 class="avenirNextDemiBold">Géométrie</h2>
                     <p>
                        En classe de cinquième, l’étude de la symétrie centrale permet de réorganiser et de 
                        compléter les connaissances sur les figures. 
@@ -296,7 +296,7 @@
                 </div>
                 
                 <div class="bgblankgrey">                    
-                    <h2>Grandeurs et mesures</h2>
+                    <h2 class="avenirNextDemiBold">Grandeurs et mesures</h2>
                     <p>
                        Cette rubrique s’appuie notamment sur la résolution de problèmes empruntés à la vie 
                        courante. Comme en classe de sixième, l’utilisation d’unités dans les calculs sur 
@@ -321,7 +321,7 @@
                 </div >
                 
                 <footer class="footer">
-                    <strong>Nos cours associés</strong>
+                    <p class="avenirNextDemiBold">Nos cours associés</p>
                     Je recherche un cours de cinquième.
                     <a href="#"><img src="{{ asset('/img/arrow-right.jpg') }}" alt="En savoir plus" /></a>
                 </footer>
@@ -341,7 +341,7 @@
                 </div>
                 
                 <div class="bgblankgrey">                    
-                    <h2>Organisation et gestion de données, fonctions</h2>
+                    <h2 class="avenirNextDemiBold">Organisation et gestion de données, fonctions</h2>
                     <p>
                         Comme en classe de cinquième, le mot « fonction » est employé, chaque fois que 
                         nécessaire, en situation, et sans qu’une définition formelle de la notion de fonction 
@@ -364,7 +364,7 @@
                 </div>
                 
                 <div class="bgblankgrey">                    
-                    <h2>Nombres et Calculs</h2>
+                    <h2 class="avenirNextDemiBold">Nombres et Calculs</h2>
                     <p>
                        La pratique du calcul numérique (exact ou approché) sous ses différentes formes en 
                        interaction (calcul mental, calcul à la main, calcul à la machine ou avec un ordinateur) 
@@ -396,7 +396,7 @@
                 </div>
                 
                 <div class="bgblankgrey">                    
-                    <h2>Géométrie</h2>                    
+                    <h2 class="avenirNextDemiBold">Géométrie</h2>                    
                     <p>
                        Dans le plan, les travaux portent sur les figures usuelles déjà étudiées (triangles, 
                        cercles, quadrilatères particuliers), pour lesquelles il est indispensable de continuer 
@@ -418,7 +418,7 @@
                 </div>
                 
                 <div class="bgblankgrey">                    
-                    <h2>Grandeurs et mesures</h2>
+                    <h2 class="avenirNextDemiBold">Grandeurs et mesures</h2>
                     <p>
                         Cette rubrique s’appuie notamment sur la résolution de problèmes empruntés à la vie 
                         courante et aux autres disciplines.
@@ -449,7 +449,7 @@
                 </div >
                 
                 <footer class="footer">
-                    <strong>Nos cours associés</strong>
+                    <p class="avenirNextDemiBold">Nos cours associés</p>
                     Je recherche un cours de quatrième.
                     <a href="#"><img src="{{ asset('/img/arrow-right.jpg') }}" alt="En savoir plus" /></a>
                 </footer>
@@ -480,7 +480,7 @@
                 </div>
                 
                 <div class="bgblankgrey">                    
-                    <h2>Organisation et gestion de données, fonctions</h2>
+                    <h2 class="avenirNextDemiBold">Organisation et gestion de données, fonctions</h2>
                     <p>
                         L’un des objectifs est de faire émerger progressivement, sur des exemples, la notion de 
                         fonction en tant que processus faisant correspondre, à un nombre, un autre nombre. 
@@ -514,7 +514,7 @@
                 </div>
                 
                 <div class="bgblankgrey">                    
-                    <h2>Nombres et Calculs</h2>
+                    <h2 class="avenirNextDemiBold">Nombres et Calculs</h2>
                     <p>
                        La pratique du calcul numérique (exact ou approché) sous ses différentes formes en 
                        interaction (calcul mental, calcul à la main, calcul à la machine ou avec un ordinateur) 
@@ -547,7 +547,7 @@
                 </div>
                 
                 <div class="bgblankgrey">                    
-                    <h2>Géométrie</h2>
+                    <h2 class="avenirNextDemiBold">Géométrie</h2>
                     <p>
                        Les objectifs des travaux géométriques demeurent ceux des classes antérieures du collège. 
                        L’étude et la représentation d’objets usuels du plan et de l’espace se poursuivent ainsi 
@@ -573,7 +573,7 @@
                 </div>
                 
                 <div class="bgblankgrey">                    
-                    <h2>Grandeurs et mesures</h2>
+                    <h2 class="avenirNextDemiBold">Grandeurs et mesures</h2>
                     <p>
                         Les situations mettant en jeu des grandeurs sont souvent empruntées à la vie courante 
                         (aires de terrains, volumes de gaz, de liquides, vitesses, débits, coûts, …) mais 
@@ -600,7 +600,7 @@
                 </div >
                 
                 <footer class="footer">                    
-                    <strong>Nos cours associés</strong>
+                    <p class="avenirNextDemiBold">Nos cours associés</p>
                     Je recherche un cours de troisième.
                     <a href="#"><img src="{{ asset('/img/arrow-right.jpg') }}" alt="En savoir plus" /></a>
                 </footer>
