--- a/src/Msp/FrontendBundle/Resources/views/Page/faq.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/faq.html.twig
@@ -18,13 +18,13 @@
 {# Le contenu de la page #}
 {% block content %}
     <header>
-        <h1>FAQ</h1>
+        <h1 class="light">FAQ</h1>
     </header>
 
     <div class="faq">
         
         <article class="odd">
-            <h1>Qui sommes nous ?</h1>
+            <h1 class="avenirNextDemiBold">Qui sommes nous ?</h1>
             <p>
                 Une structure composée de profiles scientifiques qui a pour but de rendre les mathématiques 
                 accessibles. Professeurs, chercheurs, notre parcours personnel nous a amené à rencontrer 
@@ -38,14 +38,14 @@
         </article>
         
         <article class="even">
-            <h1>Le soutien MathSup s’adresse–t-il à tous les élèves ?</h1>
+            <h1 class="avenirNextDemiBold">Le soutien MathSup s’adresse–t-il à tous les élèves ?</h1>
             <p>
                 Le soutien scolaire mathSup, s’adresse à tous types d’élèves de niveau allant du Primaire à la License. 
             </p>
         </article>
         
         <article class="odd">
-            <h1>Pourquoi le soutien scolaire MathSup ?</h1>
+            <h1 class="avenirNextDemiBold">Pourquoi le soutien scolaire MathSup ?</h1>
             <p>
                 Notre efficacité est liée :
             </p>
@@ -58,14 +58,14 @@
         </article>
         
         <article class="even">
-            <h1>À partir de quel âge le soutien scolaire MathSup ?</h1>
+            <h1 class="avenirNextDemiBold">À partir de quel âge le soutien scolaire MathSup ?</h1>
             <p>
                 Nous acceptons des étudiants de tout âge. L’important est de savoir ce que vous voulez et d’avoir un niveau inferieur à la License.
             </p>
         </article>
         
         <article class="odd">
-            <h1>Qui sont les enseignants MathSup ?</h1>
+            <h1 class="avenirNextDemiBold">Qui sont les enseignants MathSup ?</h1>
             <p>
                 Les enseignants peuvent être :
             </p>
@@ -78,7 +78,7 @@
         </article>
         
         <article class="even">
-            <h1>Comment être sure que l’enseignant conviendra à mon profil ?</h1>
+            <h1 class="avenirNextDemiBold">Comment être sure que l’enseignant conviendra à mon profil ?</h1>
             <p>
                 Lors de votre premier entretien, nous établissons un  profil de l’étudiant en termes de vie et 
                 de personnalité.  En fonction de ce profil, nous affectons un enseignant qui rentre en 
@@ -87,14 +87,14 @@
         </article>
         
         <article class="odd">
-            <h1>Comment puis-je avoir plus d’infos ?</h1>
+            <h1 class="avenirNextDemiBold">Comment puis-je avoir plus d’infos ?</h1>
             <p>
                 Pour plus d’informations, n’hésiter pas à nous contacter par téléphone ou email.
             </p>
         </article>
         
         <article class="even">
-            <h1>Pourquoi que les Maths ?</h1>
+            <h1 class="avenirNextDemiBold">Pourquoi que les Maths ?</h1>
             <p>
                 Les Maths furent une évidence au vue du profil des fondateurs mais il s’agissait aussi d’une 
                 vision ; une volonté de ne plus voir des étudiants résolus ou fatalistes.
@@ -108,7 +108,7 @@
         </article>
         
         <article class="odd">
-            <h1>Pourquoi MathSup ?</h1>
+            <h1 class="avenirNextDemiBold">Pourquoi MathSup ?</h1>
             <p>
                 Nous sommes un groupe d’universitaires positifs, nous savons qu’un bon encadrement peu conduire 
                 à une réussite inespérée. Nous en avons fait l’expérience. MathSup c’est toujours regarder vers 
@@ -117,7 +117,7 @@
         </article>
         
         <article class="even">
-            <h1>Qu’est ce que MathsPlus ?</h1>
+            <h1 class="avenirNextDemiBold">Qu’est ce que MathsPlus ?</h1>
             <p>
                 Mathplus (ou Math 4 Us) est une interface de communication que nous utilisons pour communiquer 
                 avec les étudiants et les parents d’une manière moins formel et plus en cohérence avec la 
@@ -133,7 +133,7 @@
         </article>
         
         <article class="odd">
-            <h1>Puis-je bénéficier de réduction d’impôts ?</h1>
+            <h1 class="avenirNextDemiBold">Puis-je bénéficier de réduction d’impôts ?</h1>
             <p>
                 En ce qui concerne les réductions d’impôts, elles sont possibles en qualité de particulier au de emploi de personne à domicile.
             </p>
@@ -143,7 +143,7 @@
         </article>
         
         <article class="even">
-            <h1>Comité d’entreprise</h1>
+            <h1 class="avenirNextDemiBold">Comité d’entreprise</h1>
             <p>
                 Pour comité d’entreprise :
             </p>
@@ -164,7 +164,7 @@
         </article>
         
         <article class="odd">
-            <h1>Recrutement</h1>
+            <h1 class="avenirNextDemiBold">Recrutement</h1>
             <p>
                 Nous recrutons à toute période de l’année, nous sommes inflexibles au regard des critères de diplômes. 
             </p>
