--- a/src/Msp/FrontendBundle/Resources/views/Page/index.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/index.html.twig
@@ -24,14 +24,14 @@
             </p>
         </div>
             
-        <div class="content">
-            <h2>Nos méthodes</h2>
+        <div class="content"> 
+            <h2 class="avenirNextBold">Nos méthodes</h2>
             <div>
                 <figure>
                     <img src="{{ asset('/img/logo_cours_domicile.jpg') }}" alt="" />
                 </figure>
                 <p>
-                    <strong>Cours à domicile</strong>
+                    <span class="avenirNextDemiBold">Cours à domicile</span>
                     Cours particuliers à domicile
                     <a href="#"><img src="{{ asset('/img/en_savoir_plus.jpg') }}" alt="En savoir plus" /></a>
                 </p>
@@ -41,7 +41,7 @@
                     <img src="{{ asset('/img/logo_cours_distance.jpg') }}" alt="" />
                 </figure>
                 <p>
-                    <strong>Face à face</strong>
+                    <span class="avenirNextDemiBold">Face à face</span>
                     Cours particuliers en ligne
                     <a href="#"><img src="{{ asset('/img/en_savoir_plus.jpg') }}" alt="En savoir plus" /></a>
                 </p>
@@ -51,7 +51,7 @@
                     <img src="{{ asset('/img/logo_classe_virtuelle.jpg') }}" alt="" />
                 </figure>
                 <p>
-                    <strong>Classe virtuelle</strong>
+                    <span class="avenirNextDemiBold">Classe virtuelle</span>
                     Cours en ligne (25 élèves)
                     <a href="#"><img src="{{ asset('/img/en_savoir_plus.jpg') }}" alt="En savoir plus" /></a>
                 </p>
