--- a/src/Msp/FrontendBundle/Resources/views/Page/primaire.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/primaire.html.twig
@@ -16,18 +16,18 @@
 {% block content %}
     <div class="niveau">
         
-        <p class="header">
+        <p class="header avenirNextItalic">
             En primaire, l’élève est exposé à ses premières notions de mathématiques via la numérotation, 
             la résolution de problèmes simples à l’aide des opérateurs de bases que sont l’addition, la 
             soustraction,  la multiplication et la division.<br />
-            <i>Le majeur enjeu est la maîtrise de ces quatre modes opératoires.</i>
+            Le majeur enjeu est la maîtrise de ces quatre modes opératoires.
         </p>
         
-        <p class="footer">
-            <strong>Nos cours associés</strong>
+        <footer class="footer">
+            <p class="avenirNextDemiBold">Nos cours associés</p>
             Je recherche un cours de primaire.
             <a href="#"><img src="{{ asset('/img/arrow-right.jpg') }}" alt="En savoir plus" /></a>
-        </p>
+        </footer>
         
     </div>    
 {% endblock %}
