--- a/src/Msp/FrontendBundle/Resources/views/Page/universite.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/universite.html.twig
@@ -16,17 +16,17 @@
 {% block content %}
      <div class="niveau">
         
-        <p class="header">
+        <p class="header avenirNextItalic">
             A la faculté, l’étudiant a besoin d’accompagnement pour s’adapter à ce nouvel environnement où 
             le professeur est concentré sur un groupe et non plus sur les individus.<br />
-            <i>Il faut absolument être capable de suivre le groupe pour ne pas se retrouver très vite perdu.</i>
+            Il faut absolument être capable de suivre le groupe pour ne pas se retrouver très vite perdu.
         </p>
         
-        <p class="footer">
-            <strong>Nos cours associés</strong>
+        <footer class="footer">
+            <p class="avenirNextDemiBold">Nos cours associés</p>
             Je recherche un cours universitaire.
             <a href="#"><img src="{{ asset('/img/arrow-right.jpg') }}" alt="En savoir plus" /></a>
-        </p>
+        </footer>
         
     </div>       
 {% endblock %}
