--- a/web/css/main.css
+++ b/web/css/main.css
@@ -88,13 +88,13 @@ h1.titre{font-size: 12px; line-height: 12px; text-align: center; display: none; 
 #menu ul li.active {background: url('/img/menu-hover.jpg') center bottom no-repeat; text-decoration: none;}
 #menu-niveau, .container-fluid > section > header, #connexion-menu { background-image: url('/img/bg_sub_menu.jpg');background-repeat: no-repeat;background-position: center center; min-height: 80px; min-width: 1200px }
 #menu-niveau ul, #menu-niveau ul li { min-height: 81px; max-width: 840px; margin: 0 auto; }
-.container-fluid > section > header h1, #menu-niveau ul li a, #menu-niveau ul li a:link, #menu-niveau ul li a:active, #menu-niveau ul li a:visited { display: block; padding: 0 20px; line-height: 80px; font-size: 24px; color: white;font-weight: lighter; }
+.container-fluid > section > header h1, #menu-niveau ul li a, #menu-niveau ul li a:link, #menu-niveau ul li a:active, #menu-niveau ul li a:visited { display: block; padding: 0 20px; line-height: 80px; font-size: 24px; color: white;}
 #menu-niveau ul li a:hover, #menu-niveau ul li a:focus { background: url('/img/menu-niveau-hover.jpg') center bottom no-repeat; text-decoration: none; }
 #menu-niveau ul li.niveauactive{background: url('/img/menu-niveau-hover.jpg') center bottom no-repeat;}
 
 /* menu d'inscription et de connexion'*/
 .login-sign-in, .login-sign-in li { min-height: 81px; line-height: 81px; }
-.login-sign-in li {font-weight: bold}
+.login-sign-in li {}
 .login-sign-in li a:link, .login-sign-in li a:visited, .login-sign-in li a:active 
 { 
     padding: 5px 10px; 
@@ -105,7 +105,7 @@ h1.titre{font-size: 12px; line-height: 12px; text-align: center; display: none; 
        -o-border-radius: 5px;
           border-radius: 5px;
 }
-.login-sign-in li.insactive a{padding: 5px 10px;background-color: #009fe3;}
+.login-sign-in li.insactive a{padding: 5px 10px;background-color: #009fe3; color:white}
 
 .login-sign-in li a:hover, .login-sign-in li a:focus { background-color: #009fe3; text-decoration: none;}
 /*  Formulaire de connexion  */
@@ -128,6 +128,7 @@ ul.dash li:before{
 }
 
 .content h2{text-transform:uppercase;}
+.content p span{display: block}
 /*  Contenu  accueil */
 .accueil .contentheader {background-image: url("/img/bg.jpg");background-repeat: no-repeat;background-position: center center; min-height: 254px; color: white; min-width: 1200px;}
 .accueil .contentheader h1 { margin: 0; padding-top: 50px; font-size: 36px; text-align: center; margin-bottom: 20px;text-transform: uppercase;font-weight:lighter;}
@@ -152,7 +153,7 @@ ul.dash li:before{
 #btn_up, #btn_up:hover { outline: none; }
 .niveau { background: #f2f2f2;  min-height: 500px; margin: 0 auto; width: 1200px;padding: 30px 0 30px 0}
 .niveau .header, .niveau .footer { max-width: 1000px; margin: 0 auto; }
-.niveau .header { background: #ced9e5; padding: 20px;  max-width: 960px; -webkit-border-radius: 10px; -o-border-radius: 10px; -moz-border-radius: 10px; border-radius: 10px; font-family: 'Avenir Next Italic', sans-serif;}
+.niveau .header { background: #ced9e5; padding: 20px;  max-width: 960px; -webkit-border-radius: 10px; -o-border-radius: 10px; -moz-border-radius: 10px; border-radius: 10px;}
 .niveau .footer { max-width: 400px; margin: 0 auto; text-align: center; margin-top: 20px; }
 .niveau .footer strong, .niveau .footer a { display: block; margin-bottom: 10px;}
 .niveau .footer a { margin-top: 10px; }
@@ -160,7 +161,7 @@ ul.dash li:before{
 
 .niveau #tabs > ul { max-width: 1000px; margin: 20px auto 0; }
 .niveau #tabs > ul li { display: inline-block; }
-.niveau #tabs > ul li a, .niveau #tabs > ul li a:link, .niveau #tabs > ul li a:active, .niveau #tabs > ul li a:visited { display: block; padding: 0 20px; border-right: 1px #c8c8c8 solid; font-size: 16px; color: #525252; outline: none; font-weight: bold; }
+.niveau #tabs > ul li a, .niveau #tabs > ul li a:link, .niveau #tabs > ul li a:active, .niveau #tabs > ul li a:visited { display: block; padding: 0 20px; border-right: 1px #c8c8c8 solid; font-size: 16px; color: #525252; outline: none;}
 .niveau #tabs > ul li:first-child a { padding-left: 0; }
 .niveau #tabs > ul li:last-child a { border: 0 none; }
 .niveau #tabs > ul li.ui-state-active a { color: #009fe3; }
@@ -176,6 +177,7 @@ ul.dash li:before{
 .niveau #tabs article ul { max-width: 970px; margin: 0 auto; }
 p strong.blue { display: inline-block; color: #009fe3; font-weight: normal; margin-bottom: 10px; }
 .niveau #tabs article .noborder { border: 0 none; }
+.niveau #tabs article .contenu-simple{padding: 20px 0;} 
 /*  Contenu FAQ  */
 .container-fluid > section > header h1 { text-align: center; margin: 0; }
 .faq{width: 1200px;margin: 0 auto; }
@@ -184,15 +186,16 @@ p strong.blue { display: inline-block; color: #009fe3; font-weight: normal; marg
 .faq article p.faq-top strong { color: #009fe3; }
 .faq article.odd { background: #3b3b3b url('/img/faq-odd.jpg') top center repeat-y; padding: 20px 0; color: #b8b8b8; border-bottom: 1px #585858 solid; }
 .faq article.even { background: #323232 url('/img/faq-even.jpg') top center repeat-y; padding: 20px 0; color: #8a8a8a; border-bottom: 1px #585858 solid; }
-.faq article h1 { font-size: 16px; font-weight: bold; color: white; }
+.faq article h1 { font-size: 16px; color: white; }
 .faq article ul { max-width: 870px; margin: 0 auto; }
 .faq article ul ul { max-width: 840px; }
+.faq article p, .faq article ul{font-weight:lighter;}
 /*  Content contact  */
     /*  Ici le slider  */
 .contact { background: #f2f2f2; padding-bottom: 30px; }
 .contact .newsletter {  background: #fff; border-top: 1px #cecece solid; border-bottom: 1px #cecece solid; }
 .contact .firswrap, .contact article  { max-width: 1000px; margin: 0 auto; }
-.contact article h1, .newsletter h1 { font-size: 16px; color: #009fe3; font-weight: bold }
+.contact article h1, .newsletter h1 { font-size: 16px; color: #009fe3}
 
 .contact .firswrap > article { display: inline-block; vertical-align: top; width: 75%; }
 .contact .firswrap > article + article { width: 23%; margin-left: 1%; }
@@ -202,7 +205,7 @@ p strong.blue { display: inline-block; color: #009fe3; font-weight: normal; marg
        -o-border-radius: 5px;
           border-radius: 5px;
 }
-.contact .firswrap cite { display: block; text-align: right;font-weight: bold }
+.contact .firswrap cite { display: block; text-align: right;}
 
 
 .contact #contactform fieldset { background: white; padding: 20px; border:  1px #cecece solid; 
@@ -224,7 +227,7 @@ p strong.blue { display: inline-block; color: #009fe3; font-weight: normal; marg
 #contactform fieldset .bottomwrap > div { display: inline-block; vertical-align: middle; width: 20%;}
 #contactform fieldset .bottomwrap .email-send { width: 72%;  padding: 0 20px; background: #525252 url('/img/mail-send.jpg') top right no-repeat; height: 39px; line-height: 39px; color: white; }
 #contactform fieldset .bottomwrap .button-send{ float: right; margin: 0; }
-#contactform fieldset .bottomwrap > div button { width: 100%; height: 39px; line-height: 39px; background: #004899; color: white; border: 0 none; font-weight: bold; 
+#contactform fieldset .bottomwrap > div button { width: 100%; height: 39px; line-height: 39px; background: #004899; color: white; border: 0 none; 
      -webkit-border-radius: 5px;
         -moz-border-radius: 5px;
           -o-border-radius: 5px;
@@ -247,7 +250,7 @@ p strong.blue { display: inline-block; color: #009fe3; font-weight: normal; marg
 .newsletter h1, .newsletter form {  display: inline-block; vertical-align: middle; margin: 0; }
 .newsletter h1 { margin-right: 17.3%; }
 .newsletter input[type=text], .newsletter input[type=email] { width: 200px; padding: 10px; background: #f0f0f0; border: 2px #e5e5e5 solid; margin-right: 20px; }
-.newsletter button { width: 150px; background: #004899; color: white; border: 0 none; font-weight: bold; height: 40px; line-height: 40px; 
+.newsletter button { width: 150px; background: #004899; color: white; border: 0 none; height: 40px; line-height: 40px; 
     -webkit-border-radius: 5px;
         -moz-border-radius: 5px;
           -o-border-radius: 5px;
