--- a/src/Msp/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/Msp/UserBundle/Resources/views/Registration/register.html.twig
@@ -1,7 +1,7 @@
 {% extends "MspUserBundle::layout.html.twig" %}
 
 {# Le titre de la page (defaut MathSup) #}
-{% block title %}INSCRIPTION | {{ parent() }}{% endblock %}
+{% block title %}INSCRIPTION PROFESSEUR | {{ parent() }}{% endblock %}
 {# La description de la page (defaut vide) #}
 {% block description %}{% endblock %}
 {# Les mots clés de la page (defaut vide) #}
@@ -10,14 +10,15 @@
 {% block robots %}noindex, nofollow{% endblock %}
 
 {# Le titre de l'entête du document #}
-{% block entetetitle %}INSCRIPTION | {{ parent() }}{% endblock %}
+{% block entetetitle %}INSCRIPTION PROFESSEUR | {{ parent() }}{% endblock %}
 {# La barre latéralke de la page #}
 {% block aside %}{{ parent() }}{% endblock %}
 
 {% block fos_user_content %}
 
 <header>        
-    <h1>INSCRIPTION</h1>        
+    <h1>INSCRIPTION PROFESSEUR</h1>
+    <p class="pull-right"><a class="btn" href="{{ path('msp_eleve_inscription')}}">INSCRIPTION ELEVE</a></p>    
 </header>
 
 <div>
